# Discord-Capture-Limiter

./: Cargo.toml  LICENCE-APACHE  LICENCE-MIT  LICENSE  README.md  config.toml.example  shell.nix
src/: main.rs
